--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,21 @@
-# Python
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
-*.swp
-*.egg-info/
+*.py[cod]
+*$py.class
+
+# C extensions
+*.so
+
+# Distribution / packaging
 build/
 dist/
+*.egg-info/
 *.egg
-*.log
+*.wheel
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
 
 # Virtual environment
 venv/
@@ -16,3 +23,18 @@ bin/
 lib/
 include/
 pyvenv.cfg
+
+# Editor directories and files
+.idea/
+.vscode/
+*.swp
+*.swo
+*.swn
+*.bak
+
+# System files
+.DS_Store
+Thumbs.db
+
+# Notes directory (optional: keep local notes outside Git)
+note_taker/notes/
